# aoc2023

./: CMakeLists.txt  make_input.sh
day01/: CMakeLists.txt  day01.cpp  input.h
day02/: CMakeLists.txt  day02.cpp  input.h
day03/: CMakeLists.txt  day03.cpp  input.h
day04/: CMakeLists.txt  day04.cpp  input.h
day05/: CMakeLists.txt  day05.cpp  input.cpp  input.h
day06/: CMakeLists.txt  day06.cpp
day07/: CMakeLists.txt  day07.cpp
day08/: CMakeLists.txt  day08.cpp
day09/: CMakeLists.txt  day09.cpp
day10/: CMakeLists.txt  day10.cpp
day11/: CMakeLists.txt  day11.cpp
day12/: CMakeLists.txt  day12.cpp
day13/: CMakeLists.txt  day13.cpp
day14/: CMakeLists.txt  day14.cpp
day15/: CMakeLists.txt  day15.cpp
day16/: day16.cpp
day17/: CMakeLists.txt  day17.cpp
day18/: CMakeLists.txt  day18.cpp
day19/: CMakeLists.txt  day19.cpp
template/: CMakeLists.txt  day99.cpp
